--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/CrearFormulario/AsignarPreguntas.cshtml
@@ -3,7 +3,7 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+ 
 @Styles.Render("~/Content/scrollbar-tabla.css")
 @* Inclusiones necesarias para poder hacer validaciones *@
 <link href="~/Content/Site.css" rel="stylesheet" />
@@ -21,179 +21,194 @@
             {
                 type: "POST", //HTTP POST Method
                     url: "AgregarConformado", // Controller/View
+                     
                 data: { //Passing data
                     codigoFormulario:  @Html.Raw(Json.Encode(Model.Formulario.CodigoFormulario)),
+                    nombreFormulario:  @Html.Raw(Json.Encode(Model.Formulario.Nombre)),
                     Orden_Seccion: $("#Orden_Seccion").val(),
                     Orden_Item: $("#Orden_Item").val(),
-                    Titulo: $("input:radio[name=seccion]:checked").val(),
+                    TituloSeccion: $("input:radio[name=seccion]:checked").val(),
                     ItemId: $("input:radio[name=item]:checked").val()
                     },
-                    //success(function(data) {
-                    //    $('#ConformadosID').html(result);
-                    //})
-
+                    success: function (result) {
+                        alert("Se asigno la pregunta: " + $("input:radio[name=item]:checked").val() + ", en la seccíon: "
+                            + $("input:radio[name=seccion]:checked").val()),
+                        $('#ConformadosID').html(result);
+                    }
                 });
 
             });
         });
 
+
+
 </script>
 
 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-@*<div id="content">*@  
-    <div class="row">
-        <div class="col-sm-4"><h3><strong>Codigo:</strong> @Model.Formulario.CodigoFormulario </h3></div>
-        <div class="col-sm-8"><h3><strong>Nombre:</strong> @Model.Formulario.Nombre</h3></div>
-    </div>
+@*<div id="content">*@
+<div class="row ">
+    <div class="col-sm-4"><h3><strong>Codigo:</strong> @Model.Formulario.CodigoFormulario </h3></div>
+    <div class="col-sm-8"><h3><strong>Nombre:</strong> @Model.Formulario.Nombre</h3></div>
+</div>
 
 
-    <div class="form-group">
+<div class="form-group">
 
-        @Html.Label("Orden de la Seccion", htmlAttributes: new { @class = "control-label col-md-2" })
+    @Html.Label("Orden de la Seccion", htmlAttributes: new { @class = "control-label col-md-2" })
 
-        <div class="col-md-4">
-            @Html.EditorFor(model => model.Orden_Seccion, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Orden_Seccion, "", new { @class = "text-danger" })
-
-        </div>
-        @Html.Label("Orden de la pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
-
-        <div class="col-md-4">
-            @Html.EditorFor(model => model.Orden_Item, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Orden_Item, "", new { @class = "text-danger" })
-
-        </div>
+    <div class="col-md-4">
+        @Html.EditorFor(model => model.Orden_Seccion, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Orden_Seccion, "", new { @class = "text-danger" })
 
     </div>
-            <button id="btnSave" name="btnSave">GUARDAR</button><br />
-            <div class="row">
-                <div class="col-sm-5">
-                    <h4 align='center'><strong>@Html.Label("Secciones")</strong></h4>
-                    <table class="table table-bordered table-striped fixed_header">
-                        <tr>
-                            <td></td>
-                            <td>
-                                @Html.Label("Titulo")
-                            </td>
-                            <td>
-                                @Html.Label("Descripción")
-                            </td>
-                        </tr>
+    @Html.Label("Orden de la pregunta", htmlAttributes: new { @class = "control-label col-md-2" })
+
+    <div class="col-md-4">
+        @Html.EditorFor(model => model.Orden_Item, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.ValidationMessageFor(model => model.Orden_Item, "", new { @class = "text-danger" })
+
+    </div>
+
+</div>
+<div class="row">
+    <div class="col-sm-6 right">
+        <input type="button" id="btnSave" value="Asignar pregunta" class="btn btn-secondary"  onclick="accionBotonCrearNueva()" />
+    </div>
+</div>
+
+<div class="row">
 
 
-                        @foreach (var seccion in Model.Secciones)
-                        {
-                            <tr>
-                                <td>
-                                    <input type="radio" id="seccion" name="seccion" value="@seccion.Titulo" />
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(model => seccion.Titulo)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(model => seccion.Descripcion)
-                                </td>
-
-                            </tr>
-                        }
-
-                    </table>
-
-                </div>
-                @*</div>
-                    <div class="row">*@
-                <div class="col-sm-7">
-                    <h4 align='center'><strong>@Html.Label("Banco de Preguntas")</strong></h4>
-                    <table class="table table-bordered table-striped fixed_header">
-                        <tr>
-                            <td></td>
-                            <td>
-                                @Html.Label("Código")
-                            </td>
-                            <td>
-                                @Html.Label("Planteamiento")
-                            </td>
-                            <td>
-                                @Html.Label("Tipo")
-                            </td>
-                        </tr>
-
-
-                        @foreach (var item in Model.Items)
-                        {
-                            <tr>
-                                <td>
-                                    <input type="radio"  name="item" id="item" value="@item.ItemId" />
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ItemId)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.TextoPregunta)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.TipoPregunta)
-                                </td>
-                            </tr>
-                        }
-
-                    </table>
-                </div>
-            </div>
-            <div class="row" id="ConformadosID">
-
-                @Html.Partial("ConformadoVParcial", Model.Conformados)
-
-            </div>
-        </div>
-
-        <thead>
-
+    <div class="col-sm-5">
+        <h4 align='center'><strong>@Html.Label("Secciones")</strong></h4>
+        <table class="table table-bordered table-striped fixed_header">
             <tr>
-
-
                 <td>
-
-
-
-                    <div>
-                        <div style="float: right; width: 500px; padding: 15px;">
-
-
-                        </div>
-
-                        <div style=" width: 500px; padding:  15px;">
-
-
-
-                        </div>
-                    </div>
-
-
-                    <button disabled>
-                        Añadir pregunta al formulario.
-                    </button>
-
-                    <div style="float: left; width: 1000px; padding: 50px;">
-                        @*@Html.Action("SeccionesAsignadas", new
-                            {CodForm = Model.Formulario.CodigoFormulario})*@
-                    </div>
-
-                    <input type="submit" value="Generate report" />
-                    <div style="clear: both;"></div>
+                    @Html.Label("Seleccione la sección")
                 </td>
-
+                <td>
+                    @Html.Label("Titulo")
+                </td>
+                <td>
+                    @Html.Label("Descripción")
+                </td>
             </tr>
 
-        </thead>
+
+            @foreach (var seccion in Model.Secciones)
+            {
+                <tr>
+                    <td>
+                        <input type="radio" id="seccion" name="seccion" value="@seccion.Titulo" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => seccion.Titulo)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => seccion.Descripcion)
+                    </td>
+
+                </tr>
+            }
+
+        </table>
+
+    </div>
+    @*<input type="button" id="btnSave" value="Asignar pregunta" class="btn btn-secondary" onclick="accionBotonCrearNueva()" />*@
+    @*</div>
+        <div class="row">*@
+    <div class="col-sm-7">
+        <h4 align='center'><strong>@Html.Label("Banco de Preguntas")</strong></h4>
+        <table class="table table-bordered table-striped fixed_header">
+            <tr>
+                <td></td>
+                <td>
+                    @Html.Label("Código")
+                </td>
+                <td>
+                    @Html.Label("Planteamiento")
+                </td>
+                <td>
+                    @Html.Label("Tipo")
+                </td>
+            </tr>
 
 
-        <script>
+            @foreach (var item in Model.Items)
+            {
+                <tr>
+                    <td>
+                        <input type="radio" name="item" id="item" value="@item.ItemId" />
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ItemId)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TextoPregunta)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TipoPregunta)
+                    </td>
+                </tr>
+            }
+
+        </table>
+    </div>
+</div>
+<div class="row" id="ConformadosID">
+
+    @Html.Partial("ConformadoVParcial", Model.Conformados)
+
+</div>
+        </div>
+
+<thead>
+
+    <tr>
+
+
+        <td>
+
+
+
+            <div>
+                <div style="float: right; width: 500px; padding: 15px;">
+
+
+                </div>
+
+                <div style=" width: 500px; padding:  15px;">
+
+
+
+                </div>
+            </div>
+
+
+            <button disabled>
+                Añadir pregunta al formulario.
+            </button>
+
+            <div style="float: left; width: 1000px; padding: 50px;">
+                @*@Html.Action("SeccionesAsignadas", new
+                    {CodForm = Model.Formulario.CodigoFormulario})*@
+            </div>
+
+            <input type="submit" value="Generate report" />
+            <div style="clear: both;"></div>
+        </td>
+
+    </tr>
+
+</thead>
+
+
+<script>
     function prueba() {
             document.location = '@Url.Action("Index")';
         }
-        </script>
+</script>
 
 
 
