Procedimiento almacenado agregado para obtener nombre y apellido.  Mejoras visuales en el layout.

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                         <ul class="dropdown-menu">
                             <li>@Html.ActionLink("Cambiar perfil actual", "Index", "Perfil")</li>
                             <li class="disabled"><a id="link_deshabilitado">Asignar/Revocar permisos</a></li>
-                            <li class="disabled"><a id="link_deshabilitado">Crear perfi</a></li>
+                            <li class="disabled"><a id="link_deshabilitado">Crear perfil</a></li>
                             <li class="disabled"><a id="link_deshabilitado">Eliminar perfil</a></li>
                         </ul>
                     </li>
