--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
@@ -1,12 +1,19 @@
-﻿<nav class="navbar navbar-principal navbar-fixed-top" style="z-index:999">
+﻿@using Opiniometro_WebApp.Controllers.Servicios;
+<nav class="navbar navbar-principal navbar-fixed-top" style="z-index:999">
     <div class="container-fluid">
-        <div class="navbar-header">
-            <div style="height:105px; width: 570px; margin-left:80px ;overflow: hidden" text-align="center">
+        <ul class="navbar-header">
+            <li style="height:105px; width: 570px; margin-left:30px; margin-top:-25px; overflow: hidden" text-align="center">
                 <a class="navbar-brand-barra-login" href="/">
                     <img src="~/Content/firma-ucr-c.svg" width="1100">
                 </a>
-            </div>
-        </div>
+            </li>
+        </ul>
+        @if (ViewBag.Title != "Recuperar contraseña" && ViewBag.Title != "Inicio de sesión")
+        {
+            <ul class="nav navbar-nav navbar-right">
+                <li style="margin-right:92px; margin-top:45px"><p class="navbar-text"> @IdentidadManager.obtener_nombre_actual() - @IdentidadManager.obtener_perfil_actual()</p></li>
+            </ul>
+        }
     </div>
 </nav>
 
