--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/AsignarFormularios/Index.cshtml
@@ -10,7 +10,7 @@
 @Scripts.Render("~/Scripts/jquery.unobtrusive-ajax.min.js")﻿
 
 <div>
-    <h1 align="center">Asignación de herramientas de evaluación</h1>
+    <h1 align="center">Asignación de Formularios</h1>
 </div>
 
 <div class="container">
