Se arreglo procedimiento almacenado SP_GenerarContrasena

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/_Layout.cshtml
@@ -66,7 +66,8 @@
                                 }
                                 else
                                 {                                    
-                                    <li class="disabled"><a>Cargar Archivo</a></li>
+                                    <li>@Html.ActionLink("Cargar Archivo", "CargarArchivo", "Administrador")</li>
+                                    <!-- <li class="disabled"><a>Cargar Archivo</a></li> -->
                                 }
                             }
                         </ul>
