--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Shared/Auth/BarraLogin.cshtml
@@ -2,11 +2,24 @@
 <nav class="navbar navbar-principal navbar-fixed-top" style="z-index:999">
     <div class="container-fluid">
         <ul class="navbar-header">
-            <li style="height:105px; width: 570px; margin-left:30px; margin-top:-25px; overflow: hidden" text-align="center">
-                <a class="navbar-brand-barra-login" href="/">
-                    <img src="~/Content/firma-ucr-c.svg" width="1100">
-                </a>
-            </li>
+            @if (Request.Browser.Type.Contains("Firefox"))
+            {
+                // Firefox se comporta distinto con los margenes.
+                <li style="height:105px; width: 570px; margin-left:30px; margin-top:-8px; overflow: hidden" text-align="center">
+                    <a class="navbar-brand-barra-login" href="/">
+                        <img src="~/Content/firma-ucr-c.svg" width="1100">
+                    </a>
+                </li>
+               
+            }
+            else
+            {
+                <li style="height:105px; width: 570px; margin-left:30px; margin-top:-25px; overflow: hidden" text-align="center">
+                    <a class="navbar-brand-barra-login" href="/">
+                        <img src="~/Content/firma-ucr-c.svg" width="1100">
+                    </a>
+                </li>
+            }
         </ul>
         @if (ViewBag.Title != "Recuperar contraseña" && ViewBag.Title != "Inicio de sesión")
         {
