Agregar permisos incluido

--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@model Opiniometro_WebApp.Models.PersonaPerfilEnfasisModel
+﻿@model Opiniometro_WebApp.Models.PersonaPerfilEnfasisModel
 
 @{
     ViewBag.Title = "Index";
@@ -74,11 +72,7 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-3">
-                    <input type="submit" value="Guardar" class="btn btn-default" />
-                </div>
-            </div>
+
             <br>
             <div class="form-group">
                 <div class="col-md-10">
@@ -118,6 +112,3 @@
         </div>
     }
 </div>
-
-
-
