--- a/Opiniometro_WebApp/Opiniometro_WebApp/Models/Model_Opiniometro.Context.tt
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Models/Model_Opiniometro.Context.tt
@@ -2,7 +2,7 @@
 <#@ include file="EF6.Utility.CS.ttinclude"#><#@
  output extension=".cs"#><#
 
-const string inputFile = @"Opiniometro_Model.edmx";
+const string inputFile = @"Model_Opiniometro.edmx";
 var textTransform = DynamicTextTransformation.Create(this);
 var code = new CodeGenerationTools(this);
 var ef = new MetadataTools(this);
