--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -87,7 +87,7 @@
                                             {
                                                 <tr>
                                                 <td>@Model.Perfil.ElementAt(i)</td>
-                                                    <td><input type="checkbox" name="prueba" value="prueba"> <br></td>
+                                                    <td>@Html.CheckBoxFor(model => Model.perfilesAsignados.ElementAt(i).asignar, new {  @checked = "checked", @id = i })</td>
                                                 </tr>
                                                    }
                                               }
