--- a/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
+++ b/Opiniometro_WebApp/Opiniometro_WebApp/Views/Admin/Editar.cshtml
@@ -56,48 +56,42 @@
                 </div>
 
             </div>
-            <br>                                
+            <br>
             <div class="form-group">
                 <div class="col-md-10">
                     <div class="col-md-2">
                         <div style="margin-left:80px; width: 200px ">
                             <table class="table">
-                            @{
-                                if (Model.Perfil != null)
-                                {
-                                <tr>
-                                    <th>
-                                        Perfiles
-                                    </th>
-                                    <th></th>
-                                </tr>
-                                    for (int i = 0; i < Model.Perfil.Count; i++)
+                                @{
+                                    if (Model.Perfil != null)
                                     {
                                         <tr>
-                                        <td>@Model.Perfil.ElementAt(i)</td>
-                                            <td><input type="checkbox" name="prueba" value="prueba"> <br></td>
+                                            <th>
+                                                Perfiles
+                                            </th>
+                                            <th></th>
                                         </tr>
-                                            for (int i = 0; i < Model.Perfil.Count; i++)
-                                            {
-                                                <tr>
+                                        for (int i = 0; i < Model.Perfil.Count; i++)
+                                        {
+                                            <tr>
                                                 <td>@Model.Perfil.ElementAt(i)</td>
-                                                    <td>@Html.CheckBoxFor(model => Model.perfilesAsignados.ElementAt(i).asignar, new {  @checked = "checked", @id = i })</td>
-                                                </tr>
-                                             }
+                                                <td>@Html.CheckBoxFor(model => Model.perfilesAsignados.ElementAt(i).asignar, new { @checked = "checked", @id = i })<br></td>
+                                            </tr>
                                         }
-                                     }      
-                                          
+                                    }
+                                }
+
                             </table>
                         </div>
 
                     </div>
                 </div>
-            </div>                      
+            </div>
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Guardar" class="btn btn-default" />
                 </div>
             </div>
         </div>
-    }
+                                    }
 </div>
